Fix overflow footer

--- a/Bai-tap-1/style.css
+++ b/Bai-tap-1/style.css
@@ -22,6 +22,7 @@ body {
     backdrop-filter: blur(20px);
     border: 2px solid white;
     border-radius: 10px;
+    overflow: hidden;
 }
 
 .wrapper .circular--portrait {
@@ -130,10 +131,11 @@ body {
 .wrapper .social-connect {
     display: flex;
     width: 100%;
+    height: 500px;
     font-size: 16px;
     justify-content:center;
     background-color: #F9FAFC;
-    padding: 15px 30px 0 30px;
+    padding: 20px 30px 0 30px;
 }
 
 .social-connect p {
